[AOT] vm crash when run test compiler/aot/fingerprint/SelfChangedCDS.java

XMLWordPrintable

    • b11
    • generic
    • generic

      [stdout = 34 1 loaded ./libSelfChanged.so aot library
      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/g1BarrierSet.cpp:51
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (src/hotspot/share/gc/g1/g1BarrierSet.cpp:51), pid=20862, tid=20863
      # assert(oopDesc::is_oop(pre_val, true)) failed: Error
      #

            Assignee:
            Vladimir Kozlov
            Reporter:
            Vladimir Kozlov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: