8201850: [AOT] vm crash when run test compiler/aot/fingerprint/SelfChangedCDS.java

Set AOT specific compressed oop shift value before CDS archive load

Reviewed-by: iklam, jiangli